--- a/OC-Nodejs/package.json
+++ b/OC-Nodejs/package.json
@@ -2,9 +2,10 @@
     "name": "ma-todolist",
     "version": "0.1.0",
     "dependencies": {
-        "ejs": "^2.6.1",
-        "express": "^4.17.0",
+        "body-parser": "~1.10.1",
+        "bootstrap": "^4.5.0",
         "cookie-session": "~1.1.0",
-        "body-parser": "~1.10.1"
+        "ejs": "^2.6.1",
+        "express": "^4.17.0"
     }
 }
